method/gpus_amazon/amazon.out

Due to MODULEPATH changes, the following have been reloaded:
  1) openmpi/3.1.2

  File "main.py", line 239
    add_log('Found GPU')
          ^
IndentationError: expected an indented block
